update: include my middle name

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goodness Akoma | WDD 130</title>
+    <title>Goodness James Akoma | WDD 130</title>
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
     <main>
         <h1>Goodness Akoma | WDD 130</h1>
         <img src="images/profile.webp" alt="Goodness Akoma" width="200">
-        <p>Hey there! I'm Goodness Akoma. I love God so much because he loved me first, unconditionally.</p>
+        <p>Hey there! I'm Goodness James Akoma. I love God so much because he loved me first, unconditionally.</p>
     </main>
     <footer>
         <p>©2025 💛 Goodness Akoma 💛 Imo, Nigeria</p>
